# Coursework_6_PD12

./: README.md  manage.py  pyproject.toml
Coursework_6_PD12/: asgi.py  settings.py  urls.py  wsgi.py
advertisements/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
advertisements/migrations/: 0001_initial.py
fixtures/: ad.json  comments.json  create_fill_database.py  users.json
market_postgres/: docker-compose.yaml
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
